<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blokknote</string>
    <string name="hint_text">Пиши…</string>
    <string name="hint_text_en">Typing…</string>
    <string name="file_saved">Файл сохранён: %s</string>
    <string name="file_save_error">Не удалось сохранить файл</string>
    <string name="empty_note">Заметка пуста</string>
    <string name="confirm_clear">Очистить заметку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="clear">Очистить</string>
    <string name="download">Скачать</string>
    <string name="share">Поделиться</string>
    <string name="bold">e</string>
    <string name="italic">f</string>
    <string name="underline">g</string>
    <string name="heading">h3</string>
    <string name="list">i-j-k</string>
    <string name="cancel">↶</string>
    <string name="font">Шрифт</string>
    <string name="size">Размер</string>
    <string name="save">Сохранить</string>
    <string name="saved">Сохранено</string>
    <string name="error">Ошибка</string>
    <string name="share_subject">Заметка из Blokknote</string>
    <string name="share_chooser">Поделиться заметкой</string>
    <string name="font_courier">Courier New</string>
    <string name="font_consolas">Consolas</string>
    <string name="font_lucida">Lucida Console</string>
    <string name="font_dejavu">DejaVu Sans Mono</string>
    <string name="font_serif">Generic Serif</string>
    <string name="font_palatino">Palatino</string>
    <string name="font_times">Times New Roman</string>
    <string name="font_georgia">Georgia</string>
</resources>
